# TicTacToe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: code-checks.yml
github/workflows/: code-checks.yml
src/: bad_formatted_code.py  bad_formatted_code2.py  board.py
tests/: test_board.py  test_gameplay.py
