[tool.poetry]
name = "template"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.3,<3.11"
numpy = "1.21.5"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"
isort = "^5.10.1"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
